--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "geojson-extract-geometries": "0.0.2",
     "leaflet": "^1.2.0",
     "osmtogeojson": "^2.2.12",
     "prop-types": "^15.6.0",
