--- a/package.json
+++ b/package.json
@@ -31,5 +31,6 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "babel-eslint": "^8.0.2"
-  }
+  },
+  "homepage" : "https://drklrd.github.io/adminboundaries-np",
 }
