--- a/package.json
+++ b/package.json
@@ -32,5 +32,5 @@
     "eslint-plugin-react": "^7.4.0",
     "babel-eslint": "^8.0.2"
   },
-  "homepage" : "https://drklrd.github.io/adminboundaries-np",
+  "homepage" : "https://drklrd.github.io/adminboundaries-np"
 }
