--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@turf/area": "^6.0.1",
+    "@turf/bbox": "^6.0.1",
     "@turf/buffer": "^5.1.5",
+    "@turf/centroid": "^6.0.2",
     "@turf/envelope": "^5.1.5",
     "@turf/intersect": "^5.1.6",
     "@turf/union": "^5.1.5",
