implement geojson template and fetch using the same

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-scripts": "1.0.14",
     "react-select": "^1.2.1",
     "topojson-server": "^3.0.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
